lync/tests/fails/application_return_mismatch.scm
(declare g (-> int bool))
(define f (lambda () (g (g 0))))
